src/testData/analysis/hexEscapes.cr
#EXTRA_ATTRIBUTE: CrHexEscapeElement.getEscapedChar

"<error descr="Invalid hex escape"><warning descr="">\x</warning></error>"

"<error descr="Invalid hex escape"><warning descr="">\xA</warning></error>"

"<error descr="Invalid hex escape"><warning descr="">\xA</warning></error>z"

"<warning descr="¡">\xA1</warning>"

"<warning descr="«">\xab</warning>"

"<warning descr="¡">\xA1</warning>c"

"<warning descr="Þ">\xde</warning>f"

"<error descr="Invalid hex escape"><warning descr="">\x</warning></error>x"

"<error descr="Invalid hex escape"><warning descr="">\x</warning></error>xx"